tests/golden/type_errors/typed_array_assignment_mismatch.cd
let xs: [number] = [1];
let ys = ["bad"];
xs = ys;
